frontend/shared.css
.card-shell {
  background: var(--bg-muted);
  border: 1px solid var(--border-very-muted);
  border-radius: 8px;
  width: fit-content;
  max-width: 100%;
}

.card-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.2rem 1rem 0.2rem 0.5rem;
  border-bottom: 1px solid var(--border-muted);
  height: max-content;
}

.card-title {
  /* sometimes it's not a title in the header  */
  display: inline-flex;
  align-items: center;
  gap: 8px;
  color: var(--text-bright);
  font-size: 1.1rem;
  text-align: left;
  font-weight: 600;
}

/* .card-hint {
  font-size: 10px;
  color: var(--text-muted);
  border: 1px solid var(--border-muted);
  border-radius: 999px;
  padding: 3px 8px;
} */

.card-body {
  padding: 0.5rem 1rem 1rem 1rem;
}
.header-button {
  color: var(--text-main);
  border-radius: 4px;
  border: 1px solid var(--border-muted);
  background-color: var(--bg-main);
  margin: 0px 4px 0px 0px;
  text-wrap-mode: nowrap;
  padding: 12px;
  cursor: pointer;
}

.generic-button {
  color: var(--text-main);
  border-radius: 4px;
  border: 1px solid var(--border-muted);
  background-color: var(--bg-main);
  padding: 2px 4px;
  text-wrap-mode: nowrap;
  cursor: pointer;
}

.barebone-button {
  border-radius: 4px;
  border: 1px solid var(--border-muted);
  padding: 2px 4px;
  cursor: pointer;
}
.generic-button:hover {
  background-color: var(--bg-very-bright);
}

.header-button:hover {
  background-color: var(--bg-very-bright);
}

.header-button.selected {
  color: var(--gold);
}

.header-spacer {
  width: 10px;
  min-width: 10px;
}
.thin-scroll-bar {
  scrollbar-width: thin;
}

.selector {
  padding: var(--spacing);
  border-radius: var(--radius-sm);
  border: 1px solid var(--border-muted);
}

.generic-input {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: 16px;
  min-width: 0;
  text-align: left;
  padding-right: 8px;
  border: 1px solid var(--border-very-muted);
  height: 100%;
  background-color: var(--bg-input);
}

.control-panel-title {
  width: 100%;
  border-bottom: 1px solid var(--border-muted);
  padding-left: 8px;
}
.control-panel-checkbox-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
  border-bottom: 1px solid var(--border-very-muted);
  padding-top: 0.125rem;
  padding-bottom: 0.125rem;
  padding-left: 8px;
}

.outer-grid {
  display: grid;
  grid-template-columns: var(--grid-cols);
  align-items: center;
  background: var(--bg-muted);
  border-radius: 8px;
  width: max-content;
  max-width: 100%;
  height: max-content;
  row-gap: 0px;
  overflow-x: scroll;
  overflow-y: hidden;
  scrollbar-width: thin;
}

.mats-row {
  display: grid;
  grid-column: 1 / -1;
  grid-template-columns: subgrid;
  align-items: center;
  border-bottom: 1px solid var(--border-very-muted);
  height: 42px;
  min-height: 0;
  text-align: center;
  justify-content: start;
}
.mats-row.disabled {
  opacity: 0.5;
}

.question-mark {
  width: 16px;
  height: 16px;
  min-width: 16px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: center;
  font-weight: bold;
  background-color: var(--text-bright);
  color: var(--bg-void);
  font-size: 12px;
}

.question-mark::after {
  content: "?";
  font-weight: 800;
}
.annotation {
  color: var(--text-muted);
  font-size: var(--text-2xs);
  line-height: 0.55rem;
}

.generic-icon {
  object-fit: contain;
  display: block;
}

.generic-icon.disabled {
  opacity: 0.5;
}

.can-disable-icon-wrapper {
  position: relative;
  display: inline-block;
}

.can-disable-icon-wrapper.ticked::after {
  content: "";
  position: absolute;
  bottom: 7%;
  right: 4%;
  width: 13%;
  height: 25%;
  border-right: 2px solid var(--tick-green);
  border-bottom: 2px solid var(--tick-green);
  transform: rotate(45deg);
  z-index: 2;
}

.can-disable-icon-wrapper.disabled::before,
.can-disable-icon-wrapper.disabled::after {
  content: "";
  position: absolute;
  inset: 0;
  margin: auto;
  width: 8%;
  height: 100%;
  background: var(--warning-dark);
  border-radius: 4px;
  z-index: 1;
}

.can-disable-icon-wrapper.disabled::before {
  transform: rotate(45deg);
}

.can-disable-icon-wrapper.disabled::after {
  transform: rotate(-45deg);
}

.lit-button {
  cursor: pointer;
  border-radius: 9999px;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.75rem;
  line-height: 1rem;
  user-select: none;
}

.link {
  color: var(--gold);
  text-decoration: underline;
}

